# memorybank

./: AGENTS.md  CONCEPT.md  Cargo.toml  LICENSE  README.md  nvim
.memory/: config.json
.memory/documents/: 27762b9d-e3b2-4342-ba9b-658a2496ff47.md  5c80e927-97fb-4584-871a-706011a61717.md  6b100109-72fa-44d8-8529-9f87740d071f.md  77ee78ad-b185-4c07-b47f-c54be07124a6.md  8ce5b505-9310-4dd5-b781-57b9cadae403.md  c34caef3-69f8-4b04-ad02-04f77a0af0c8.md  da49a308-d311-4679-b49a-d834cc3e219e.md  feaf06e9-7826-4823-b971-42fc7a0e98bf.md
.memory/sql/: 000001_init.sql  000002_add_b51e25cd-892a-4bd4-b9a1-3d311c0c1551.sql  000003_add_dd51ce63-e7df-48f1-9171-e3fe9bad7e06.sql  000004_add_5c80e927-97fb-4584-871a-706011a61717.sql  000005_add_070637fb-f53e-4ed3-b968-ff946cd8c525.sql  000006_add_7698238e-768e-4e8a-a17d-dd5a480a5f35.sql  000007_add_da49a308-d311-4679-b49a-d834cc3e219e.sql  000008_add_27762b9d-e3b2-4342-ba9b-658a2496ff47.sql  000009_add_feaf06e9-7826-4823-b971-42fc7a0e98bf.sql  000010_add_6b100109-72fa-44d8-8529-9f87740d071f.sql  000011_add_77ee78ad-b185-4c07-b47f-c54be07124a6.sql  000012_add_8ce5b505-9310-4dd5-b781-57b9cadae403.sql  000013_add_c34caef3-69f8-4b04-ad02-04f77a0af0c8.sql
.plan/CONCEPT/: REQUIREMENTS.md
.plans/CONCEPT/: PLAN.md  RESEARCH.md
.plans/fuzzy-query-search/: PLAN.md  REQUIREMENTS.md  RESEARCH.md
src/: cli.rs  config.rs  db.rs  error.rs  graph_ranker.rs  main.rs  models.rs  output.rs  paths.rs  scorer.rs  sql_log.rs  store.rs
tests/: add.rs  cli_integration.rs  graph.rs  init.rs  query.rs  query_files.rs  query_text.rs  read.rs  vcs.rs
(+13 files in other folders)
